--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body, ul, li, h1, h2, a{
     margin: 0px;
     padding: 0px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: arial;
 }
 header{
-    background-color:crimson;
+    background-color: #f63232;
     padding: 20px;
     text-align: center;
     position: fixed;
@@ -27,7 +27,7 @@ header h1{
     max-width: 100%;
 }
 .banner .welcome{
-    background-color: blue;
+    background-color: #feb614;
     color: whitesmoke;
     padding: 30px;
     position: absolute;
@@ -62,5 +62,58 @@ nav li a{
 }
 nav li a.join{
     color: #f63232;  
+}
+main{
+    max-width: 100%;
+    width: 1200;
+    margin: 80px auto;
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+article h2{
+    color: #f63232;
+    font-size: 40px;
+    font-family: cursive;
+}
+article p{
+    line-height: 2em;
+    color: #4b4b4b;
+}
+.thumbnails{
+    text-align: center;
+    margin: 80px 0;
+    white-space: nowrap;   
+}
+ .thumbnails li{
+    display: inline-block;
+    width: 40%;
+    margin: 20px 5%;
+}
+.thumbnails li img{
+    max-width: 100%;
+}
+section.join{
+    background-color: #f4f4f4;
+    text-align: center;
+    padding: 60px 20px;
+    color: #4b4b4b;
+}
+.join h2{
+    font-size: 38px;
+    font-style: oblique;
+}
+form input{
+    margin: 20px 0;
+    padding: 10px 20px;
+    font-size: 25px;
+    border-radius: 30px;
+    border: 4px solid whitesmoke;
+}
+footer{
+    background-color: #f63232;
+    color: whitesmoke;
+    padding: 10px;
+    text-align: center;
+    font-style: italic;
 }
 
