--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ main{
 article h2{
     color: #f63232;
     font-size: 40px;
-    font-family: monospace;
+    font-family: arial;
 }
 article p{
     line-height: 2em;
