--- a/styles.css
+++ b/styles.css
@@ -126,4 +126,26 @@ nav li a:hover{
     position: relative;
     top: -4px;
 }
+form input:focus{
+    border: 4px dashed #4b4b4b;
+    outline: none;
+}
+form input:valid{
+    border: 4px solid #71d300;
+}
+article p::first-line{
+    font-weight: bolder;
+    font-size: 1.2em;
+}
+section.join p::first-letter{
+    font-style: oblique;
+    font-size: 1.2em;
+}
+p::selection{
+    background-color: blue;
+    color: whitesmoke;
+}
+p::after{
+    content: '...'
+}
 
