--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,11 @@ p::after{
      span{
         font-size: 1em; 
      }
+     .images li{
+        width: 100%;
+        margin: 20px auto;
+        display: block;
+     }
 }    
 
 
